<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    app:behavior_peekHeight="30dp"
    android:background="@color/white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/divider"
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:background="@color/d_grey"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:maxLines="3"
        android:autofillHints="name"
        android:inputType="textAutoComplete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_icon"
        app:icon="@drawable/ic_baseline_insert"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etAdd"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:icon="@drawable/ic_baseline_add"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etAdd"
        app:layout_constraintStart_toEndOf="@+id/btnIcon"/>

</androidx.constraintlayout.widget.ConstraintLayout>